[tool.poetry]
name = "repl_python3_API-for-Enviro-Club-Website"
version = "0.1.0"
description = ""
authors = ["Dhruv-Rayat1 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
